# penguin

./: .gitignore  Cargo.toml  README.md  input.csv
.github/workflows/: rust.yml
libpenguin/: Cargo.toml
libpenguin/benches/: engine.rs
libpenguin/src/: lib.rs  logger.rs  penguin.rs  types.rs
penguin-cli/: Cargo.toml
penguin-cli/src/: main.rs
src/: main.rs
