[workspace]
members = ["libpenguin", "penguin-cli"]
default-members = ["penguin-cli"]
resolver = "3"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync"] }
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
