[workspace]
members = ["libpenguin", "penguin-cli"]
default-members = ["penguin-cli"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.93.1"
authors = ["Carlos Tocino <me@charliebacon.dev>"]
repository = "https://github.com/SharliBeicon/penguin"
readme = "README.md"
description = "A toy [p]ayments [engin]e."

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
thiserror = "2.0.18"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
rust_decimal = { version = "1.37.2", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = "symbols"

[profile.release.package.penguin-cli]
opt-level = "z"
