[package]
name = "libpenguin"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio.workspace = true
thiserror.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
rust_decimal.workspace = true
