[package]
name = "libpenguin"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
rust_decimal.workspace = true
