[package]
name = "penguin-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
description.workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true
clap = { version = "4.5.58", features = ["derive"] }
csv = "1.4.0"
libpenguin = { path = "../libpenguin/" }
